--- a/motorcycle.css
+++ b/motorcycle.css
@@ -24,7 +24,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .bike-image-1 {
-    height: 80vh;
+    width: 100%;
 }
 .bike-image-2 {
     width: 100%;
@@ -44,4 +44,84 @@
 }
 .paragraph {
     font-size: 15px;
+}
+.storage-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    margin: 30px 60px;
+}
+.image {
+    grid-column: 1/2;
+    grid-row: 1/-1;
+}
+.large-font {
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+.bike-image-2 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+.paragraph {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+.first-logo {
+    width: 80px;
+}
+.second-logo {
+    width: 80px;
+}
+.third-logo {
+    width: 80px;
+}
+.service-container {
+    display: grid;
+    grid-template-columns: 30% 60%;
+    background-color: rgb(12, 10, 10);
+    color: rgb(233, 233, 233);
+    text-align: center;
+    padding: 60px 1px;
+    margin: 30px 60px;
+}
+.logo-fixing {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.heading-fixing {
+    padding: 0px 50px;
+}
+.motorcycle_main-header {
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+}
+.image3 {
+    width: 100%;
+}
+.motorcycle_main-paragraph {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.motorcycle_main-paragraph {
+    padding: 60px 250px;
+}
+.para {
+    font-size: 25px;
+}
+.motorcycle_main-image {
+    margin: 30px 200px;
+}
+.advertisment {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.flex {
+    width: 100%;
+}
+.advertisement-bike1 {
+    grid-column: 1/2;
+}
+.advertisement-bike2 {
 }
