--- a/motorcycle.css
+++ b/motorcycle.css
@@ -116,12 +116,97 @@
 .advertisment {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fx);
 }
 .flex {
     width: 100%;
+    height: 100%;
 }
-.advertisement-bike1 {
-    grid-column: 1/2;
+.super-bike1 {
+    grid-row: 1/-2;
+    grid-column: 1/-1;
 }
-.advertisement-bike2 {
+.advertisment {
+    margin: 30px 60px;
+}
+.image {
+    width: 100%;
+    height: 100%;
+}
+.head {
+    text-align: center;
+    padding: 30px;
+    font-style: oblique;
+    font-size: 30px;
+}
+.gallery_main-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 25rem);
+    grid-gap: 40px;
+    margin: 30px 60px;
+}
+.submit {
+    color: honeydew;
+    padding: 15px 32px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    margin: 4px px;
+    cursor: pointer;
+    border-radius: 12px;
+    background-color: black;
+}
+.switch {
+    text-align: center;
+}
+.last-image1 {
+    width: 100%;
+}
+.last-image2 {
+    width: 100%;
+}
+.last-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: black;
+    grid-gap: 20px;
+    margin: 30px 60px;
+    padding: 5rem 10rem;
+    color: white;
+}
+.last-para1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.last-para2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.contact-container {
+    background-color: black;
+    color: white;
+}
+.icon {
+    width: 80px;
+}
+.flexbox-1-3 {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 100px;
+    margin: 30px 60px;
+}
+.heading {
+    text-align: center;
+}
+.paragraph-last {
+    text-align: center;
+}
+.heading {
+    padding: 50px 1px 1px 1px;
+}
+.ending-container {
+    padding: 100px;
+    background-color: rgb(99, 99, 99);
+    color: white;
+    text-align: center;
 }
